; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_gfx.c_gfx_context_load.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_gfx.c_gfx_context_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32*, i32*, i64, i64, i64, i64, i64 }
%struct.TYPE_4__ = type { i64 }

@gfx = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@Pico_mcd = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gfx_context_load(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 7), i32 8)
  %6 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 6), i32 8)
  %7 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 5), i32 8)
  %8 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 4), i32 8)
  %9 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 3), i32 8)
  %10 = call i32 @load_param(i64* %3, i32 4)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @Pico_mcd, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* %3, align 8
  %15 = add nsw i64 %13, %14
  %16 = inttoptr i64 %15 to i32*
  store i32* %16, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 2), align 8
  %17 = call i32 @load_param(i64* %3, i32 4)
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @Pico_mcd, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %3, align 8
  %22 = add nsw i64 %20, %21
  %23 = inttoptr i64 %22 to i32*
  store i32* %23, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 1), align 8
  %24 = call i32 @load_param(i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gfx, i32 0, i32 0), i32 8)
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @load_param(i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
